--- a/backend-repo/package.json
+++ b/backend-repo/package.json
@@ -4,7 +4,8 @@
   "main": "index.js",
   "scripts": {
     "start": "ts-node src/core/app.ts",
-    "dev": "nodemon src/core/app.ts"
+    "dev": "nodemon src/core/app.ts",
+    "build": "tsc"
   },
   "author": "",
   "license": "ISC",
